--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Share Market Marathi</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mob_pub_banner">b195f8dd8ded45fe847ad89ed1d016da</string>
+    <string name="mob_pub_intrestitial">24534e1901884e398f1253216226017e</string>
 </resources>
