--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mob_pub_banner">b195f8dd8ded45fe847ad89ed1d016da</string>
     <string name="mob_pub_intrestitial">24534e1901884e398f1253216226017e</string>
+    <string name="moboub_reward">920b6145fb1546cf8b5cf2ac34638bb7</string>
 </resources>
