--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,58 @@
     <string name="mob_pub_intrestitial">24534e1901884e398f1253216226017e</string>
     <string name="moboub_reward">920b6145fb1546cf8b5cf2ac34638bb7</string>
 
-    <string name="upstox_fe"> </string>
-    <string name="angel_fe"> </string>
-    <string name="zerodha_fe"> </string>
+    <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 </string>
+
+    <string name="upstox_fe">शेअर मार्केटमध्ये डीमॅट खाते उघडण्यासाठी Upstox हे सर्वोत्तम व्यासपीठ आहे. Upstox फ्लॅट रु.20
+        ट्रेड  रकमेची पर्वा न करता 20 प्रति ऑर्डर त्यांना सर्वात परवडणारे व्यासपीठ बनवते. डिजिटल गोल्ड,
+        आयपीओ आणि म्युच्युअल फंडांवरही शून्य ब्रोकरेज आहेत. नवशिक्यांसाठी आणि ज्यांना जलद खाते सक्रिय करण्याची
+        आवश्यकता आहे त्यांच्यासाठी सर्वोत्तम.
+
+        महत्वाची वैशिष्टे
+       1.सोपे, जलद आणि सोपे इंटरफेस
+2. इक्विटी वर ₹ 20/ऑर्डर पर्यंत
+3. 250+ इंडिकेटर्स  100+ चार्ट
+4. 2000+ म्युच्युअल फंड योजना
+5. डायरेक्ट म्युच्युअल फंडावर जास्त परतावा मिळवा
+6. Invest ₹500 पेक्षा कमी गुंतवणूक करा
+7. 99.9% शुद्ध 24 के सोने
+8. ₹1 पेक्षा कमी गुंतवणूक करा
+9. कोठूनही रिअल-टाइम खरेदी/ विक्री करा
+10 स्टॉकमध्ये सूचीबद्ध होण्यापूर्वी त्यांची गुंतवणूक करा
+11. UPI द्वारे IPO साठी अर्ज करा
+12. आपला IPO अर्ज सहज ट्रॅक करा
+13. प्रति ऑर्डर फक्त ₹20* पर्यंत भरा
+14. TradingView आणि ChartsIQ चार्ट लायब्ररी
+        तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
+    </string>
+
+    <string name="angel_fe">Angel Broking भारतातील आणखी एक अत्यंत लोकप्रिय स्टॉक ब्रोकर आहे आणि संपूर्ण भारतात त्याची उपस्थिती आहे. आपण एंजेल ब्रोकिंगसह आयुष्यभर विनामूल्य डीमॅट खाते उघडू शकता आणि विनामूल्य चित्रपटाचे तिकीट मिळवू शकता.
+
+Angel Broking मध्ये कोणतेही अग्रिम पेमेंट नाही आणि प्रारंभिक मार्जिन मनी डिपॉझिटवर अवलंबून असते. गुंतवणूकीच्या कोणत्याही आकाराची पर्वा न करता किमान ब्रोकरेज शुल्क रु. 30. तथापि, निधी हस्तांतरित करणे खूपच अखंड आहे.
+
+महत्वाची वैशिष्टे
+
+1. बर्याच वर्षांच्या चांगल्या ट्रॅक रेकॉर्डसह एक विश्वसनीय नाव
+2. प्लॅटफॉर्म खूप प्रगत आहे
+3. चांगले संशोधन टिपा
+4. विनामूल्य आजीवन डीमॅट खाते
+    तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
+    </string>
+
+    <string name="zerodha_fe"> डिमॅट खाते उघडण्यासाठी भारतीयांमध्ये Zerodha हे आणखी एक लोकप्रिय व्यासपीठ आहे. कंपनी प्रति ऑर्डर 20 किंवा 0.03% (जे कमी असेल) फ्लॅट आकारते. जर Upstox नसेल तर Zerodha हा तुमचा अंतिम पर्याय असावा.
+
+इंटरफेसकडे जाताना, Zerodha कडे निश्चितपणे वापरकर्ता-अनुकूल इंटरफेस आहे, आणि आपण स्टॉक ट्रेडिंगसाठी पूर्णपणे नवीन असलात तरीही आपल्याला त्याची सवय होण्यास वेळ लागू नये. याशिवाय, ते वापरकर्त्यांना तांत्रिक विश्लेषणासाठी प्रगत चार्ट, निर्देशक आणि साधने प्रदान करते.
+
+महत्वाची वैशिष्टे
+
+1. वितरणावर शून्य ब्रोकेरज
+2. चांगले मार्जिन; 4 ते 15 वेळा पर्यंत
+3. जास्तीत जास्त ब्रोकेरज शुल्क रु.20 प्रत्येक निष्पादित ऑर्डरसाठी
+4. हे तांत्रिक विश्लेषणासाठी प्रगत चार्ट, निर्देशक आणि इतर साधनांसह येते
+5. खाते उघडण्यासाठी रु.300 शुल्क.
+6. Zerodha Varsity तुम्हाला शेअर बाजारातील सर्व मूलभूत गोष्टी शिकण्यास मदत करते.
+    तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
+    </string>
 
     <string name="book1"> </string>
     <string name="book2"> </string>
