--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,10 +60,25 @@ Angel Broking मध्ये कोणतेही अग्रिम पेम
     तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
     </string>
 
-    <string name="book1"> </string>
-    <string name="book2"> </string>
-    <string name="book3"> </string>
-    <string name="book4"> </string>
-    <string name="book5"> </string>
-    <string name="book6"> </string>
+    <string name="book1"> हे पुस्तक तुमच्या कष्टाने कमावलेल्या रोख गुंतवणुकीबद्दल आहे. हे आपल्याला स्मार्ट निर्णय घेण्यास मदत करते आणि यादृच्छिकपणे गुंतवणूक करत नाही. पुस्तक तुम्हाला असे क्षेत्र निर्दिष्ट करते जे तुम्हाला उच्च परतावा देण्यास मदत करेल जेणेकरून तुम्हाला हुशार निर्णय घेण्यात मदत होईल. </string>
+    <string name="book2"> पीटर लिंच या पुस्तकाचे लेखक सर्वात यशस्वी फंड व्यवस्थापकांपैकी एक आहेत ज्यांचे सरासरी वार्षिक परतावा 13 वर्ष कालावधीसाठी 30% आहे.
+
+पुस्तक मूलभूत गोष्टी चांगल्या प्रकारे स्पष्ट करते आणि सर्व नवशिक्यांसाठी त्यांच्या गुंतवणूकीचा प्रवास सुरू करण्यापूर्वी एक उत्कृष्ट वाचन आहे.
+
+गुंतवणुकीच्या तयारीपासून, कसे, केव्हा, दीर्घकालीन गुंतवणुकीच्या दृष्टिकोनापर्यंत सर्व बाबी या पुस्तकात समाविष्ट आहेत. बाजारातील विविध साठ्यांचे तपशील आणि प्रत्येक खरेदीचा दृष्टिकोन देखील नमूद केला आहे. </string>
+    <string name="book3"> निकोलस दाराव, वयाच्या केवळ 39 व्या वर्षी, शेअर बाजारातून 10 कोटी कमावले, तेही अगदी कमी रक्कम गुंतवून.
+
+शेअर बाजारातील जगातील एक उत्कृष्ट पुस्तक, या पुस्तकात त्यांनी या घटनेशी संबंधित तंत्र आणि अनुभव कव्हर केले आहेत. पुस्तक अतिशय सोपे आहे आणि गुंतवणुकीचे सर्व नियम सोप्या पद्धतीने स्पष्ट करतात.</string>
+    <string name="book4"> भारतातील शेअर बाजाराचे संपूर्ण सत्य श्री परीख यांनी पुस्तकात उत्कृष्टपणे स्पष्ट केले आहे.
+
+पुस्तक खुप सोप्या आणि समजण्याजोग्या भाषेत लिहिले आहे. हौशी गुंतवणूकदार म्हणून तुम्ही करू शकता अशा चुका हायलाइट करतात. लक्षात ठेवा, तुमच्या स्वतःच्या चुकांमधून शिकणे स्टॉक मार्केटमध्ये मोफत नाही कारण बरेच पैसे पणाला लागतात. </string>
+    <string name="book5"> सर्वकालीन महान गुंतवणूकदार श्री वॉरेन बफे यांचे मार्गदर्शक श्री बेंजामिन ग्राहम यांनी हे पुस्तक लिहिले. चांगल्या कारणास्तव त्याला शेअर बाजाराचे बायबल म्हणतात.
+
+शेअर बाजाराची मूलभूत तत्त्वे तल्लखपणे स्पष्ट केली आहेत. या पुस्तकाचे 3 भाग आहेत.
+
+प्रथम, गुंतवणुकीचा दृष्टिकोन बचावात्मक गुंतवणूकदाराद्वारे घेतला जातो. दुसरी आणि तिसरी संकल्पना बाजाराचे वर्तन आणि जोखीम व्यवस्थापन स्पष्ट करते. </string>
+    <string name="book6"> वॉरेन बफे ज्या पद्धतीने गुंतवणूक करायला शिकतात ते सर्वोत्तम पुस्तक म्हणजे स्टॉकमध्ये गुंतवणूक करण्याच्या त्याच्या मार्गात खोलवर जाणे.
+पुस्तकाची सोपी भाषा समजणे आणि अनुसरण करणे सोपे करते. सोप्या शब्दात सांगायचे तर तुम्ही वॉरेन बफे यांनी गुंतवणूक कशी केली आणि ते उच्च-दोषी शब्द तुम्हाला गोंधळात टाकल्याशिवाय करू शकता.</string>
+
+    <string name="audioble">वरील सर्व पुस्तके ऑडिओबल (Amazon Audible) वर फ्री मध्ये ऐका [Click Here to Open]</string>
 </resources>
