--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="mob_pub_intrestitial">33290de3f57543de95812416bb85387f</string>
     <string name="moboub_reward">76a018fe69034b40b532a340e2aafcbe</string>
 
-    <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 </string>
+    <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 (अकाउंट ओपन केल्यावर तुमच्या मेलवर गिफ्ट सेंड करण्यात येईल) </string>
 
     <string name="upstox_fe">शेअर मार्केटमध्ये डीमॅट खाते उघडण्यासाठी Upstox हे सर्वोत्तम व्यासपीठ आहे. Upstox फ्लॅट रु.20
         ट्रेड  रकमेची पर्वा न करता 20 प्रति ऑर्डर त्यांना सर्वात परवडणारे व्यासपीठ बनवते. डिजिटल गोल्ड,
