--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,13 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="mob_pub_banner">3d61ad459bde4fce90b93713cac8c9f5</string>
-    <string name="mob_pub_intrestitial">33290de3f57543de95812416bb85387f</string>
-    <string name="moboub_reward">76a018fe69034b40b532a340e2aafcbe</string>
+<!--    <string name="mob_pub_banner">3d61ad459bde4fce90b93713cac8c9f5</string>-->
+<!--    <string name="mob_pub_intrestitial">33290de3f57543de95812416bb85387f</string>-->
+<!--    <string name="moboub_reward">76a018fe69034b40b532a340e2aafcbe</string>-->
+
+    <string name="vengal_interstial">DEFAULT-1616133</string>
+    <string name="vangel_video">STOCK_REWARD-4463949</string>
+    <string name="vengal_appid">613764787a4169b4b10f04b5</string>
 
     <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 (अकाउंट ओपन केल्यावर तुमच्या मेलवर गिफ्ट सेंड करण्यात येईल) </string>
 
