--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,19 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-<!--    <string name="mob_pub_banner">3d61ad459bde4fce90b93713cac8c9f5</string>-->
-<!--    <string name="mob_pub_intrestitial">33290de3f57543de95812416bb85387f</string>-->
-<!--    <string name="moboub_reward">76a018fe69034b40b532a340e2aafcbe</string>-->
-
     <string name="vengal_interstial">DEFAULT-1616133</string>
     <string name="vangel_video">STOCK_REWARD-4463949</string>
     <string name="vengal_appid">613764787a4169b4b10f04b5</string>
 
     <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 (अकाउंट ओपन केल्यावर तुमच्या मेलवर गिफ्ट सेंड करण्यात येईल) </string>
+
+    <string name="grow_fe">तुम्हाला माहित आहे का? \n
+
+हा मेसेज वाचायच्या आत तुम्हाला ₹१०० रुपये भेटतील...
+कसे काय?
+Groww वर ऑफर चालू आहे जर तुम्ही आज Groww मध्ये अकाउंट ओपन केलं तर तुम्हाला 100 रुपये भेटतील अकाउंट ओपनिंग प्रोसेस फार सोपी आहे Groww  तुम्हाला कुठल्याही प्रकारचे शेअर खरेदी आणि विक्री वर ब्रोकरेज चार्जेस लावत नाही ट्रेडिंग चार्जेस 20 रुपये पर ऑर्डर आहे व तुम्ही अमेरिकेतल्या मार्केटमधील स्टॉक पण बाय करू शकतात तेही अगदी कमी पैशात व कमी ब्रोकरेज मध्ये तर लगेच मग Groww मध्ये अकाउंट ओपन करा आणि मिळवा 100 रुपये अगदी मोफत!
+
+</string>
 
     <string name="upstox_fe">शेअर मार्केटमध्ये डीमॅट खाते उघडण्यासाठी Upstox हे सर्वोत्तम व्यासपीठ आहे. Upstox फ्लॅट रु.20
         ट्रेड  रकमेची पर्वा न करता 20 प्रति ऑर्डर त्यांना सर्वात परवडणारे व्यासपीठ बनवते. डिजिटल गोल्ड,
